# LegendreOPRF

./: .gitignore  CMakeLists.txt  LICENSE  LegOPRF_ZKProof.h  MockSmallSetVole.h  OPRFLeg.h  Readme.md  VolePlus.h  VolePlusGMP.h  main.cpp  smallSetVoleFast.h  smallSetVoleGMP.h  voleUtils.h
field25519/: CMakeLists.txt  fe25519.cpp  fe25519.h
tests/: CMakeLists.txt  test_MSSV.cpp  test_OPRFLeg.cpp  test_VolePlus.cpp  test_VolePlusGMP.cpp  test_ZKP.cpp  test_fastReductionModP.cpp  test_fe25519Speed.cpp  test_smallSetVoleFast.cpp  test_smallSetVoleGMP.cpp
